Mobile form editor: always list group-elements in props view in fixed order (defined by y-position)